--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -11,6 +11,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.10);
 }
 
 .content img {
